--- a/src/pages/leaderboards/Leaderboards.module.css
+++ b/src/pages/leaderboards/Leaderboards.module.css
@@ -119,6 +119,9 @@
     .leaderboards {
 
         .header {
+            display: flex;
+            flex-direction: column;
+
             h1 {
                 font-size: 2rem;
             }
@@ -131,6 +134,7 @@
         .leaderboards-mobile {
             display: flex;
             flex-direction: column;
+            gap: var(--size-big);
         }
     }
 }
